web-infras/parser/tests/fixtures/babel/es2016/simple-parameter-list/default/output.txt
[SyntaxError]: Illegal 'use strict' directive in function with non-simple parameter list. (2,3)
2|  "use strict";
 | ^
